# harness-recall

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: adding-a-parser.md
docs/plans/: 2026-04-07-harness-recall-implementation.md  2026-04-07-v1.1-plan.md
docs/specs/: 2026-04-07-harness-recall-design.md
src/harness_recall/: __init__.py  cli.py  config.py  display.py  index.py  ir.py  tui.py
src/harness_recall/parsers/: __init__.py  base.py  claude_code.py  codex.py  cursor.py
src/harness_recall/renderers/: __init__.py  base.py  html.py  json_renderer.py  markdown.py
src/harness_recall/templates/: export.html
templates/: export.html
tests/: test_claude_code_parser.py  test_cli.py  test_codex_parser.py  test_config.py  test_cursor_parser.py  test_display.py  test_html_renderer.py  test_index.py  test_ir.py  test_json_renderer.py  test_markdown_renderer.py
tests/fixtures/: claude_simple.jsonl  claude_with_thinking.jsonl  claude_with_tools.jsonl  codex_simple.jsonl  codex_subagent.jsonl  codex_with_tools.jsonl
