[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-recall"
version = "1.1.0"
description = "Universal CLI for exporting and searching AI coding sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Timothy Dillan" },
]
keywords = ["ai", "codex", "claude", "cli", "export", "sessions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "orjson>=3.9",
    "jinja2>=3.1",
    "textual>=0.80",
]

[project.scripts]
hrc = "harness_recall.cli:main"
harness-recall = "harness_recall.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/harness_recall"]
artifacts = ["src/harness_recall/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
